--- a/mcotac-gem/platform/GNU/readme
+++ b/mcotac-gem/platform/GNU/readme
@@ -1,6 +1,8 @@
-1. Copy Makefile.lib to ../../GEMIPM2K, cd there and run
-   make -f Makefile.lib to produce gemipm2klib.a file
+How to compile mcotac-gem
 
-2. cd .. and run
-   make
+1. Copy Makefile.lib to ../../GEMIPM2K, cd there and run
+   make -f Makefile.lib to produce gemipm2klib.a static library file
+
+2. cd mcotac-gem and run make to produce mcotacgem-gnu exe file
+
    
